fix(dark-mode-toggle): fix moon icon visibility in light mode
- Hide moon icon when dark mode is disabled
- Clean up stylesheet formatting

--- a/src/components/dark-mode-toggle/dark-mode-toggle.module.scss
+++ b/src/components/dark-mode-toggle/dark-mode-toggle.module.scss
@@ -101,7 +101,7 @@
     .iconLight {
       animation: spin 4s infinite linear;
     }
-    
+
     &.darkModeEnabled {
       .moonBody {
         animation: moon-pulse 4s infinite ease-in-out;
@@ -119,6 +119,10 @@
         animation: twinkle 5s infinite ease-in-out 2s;
       }
     }
+  }
+
+  .iconDark {
+    display: none;
   }
 
   &.darkModeEnabled {
